--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -4,9 +4,15 @@
 
 #mainsection {
   background-image: url("subtle-vertical-stripes.png");
-  background-position: 100px 100px;
+  padding-bottom: 150px;
 }
 
 #backgroundpic {
   background-image: url("broadway.png");
+  padding-bottom: 190px;
+}
+
+#whitespace{
+  background-color: #FFFFFF;
+  padding-bottom: 150px;
 }
